--- a/html/ejercicio1.html
+++ b/html/ejercicio1.html
@@ -10,14 +10,16 @@
     
 </head>
 <body>
-    <script src="../js/ejercicio1.js"></script>
-    <div>
-    <h5>Ingresa un número</h5>
-    <input type="text"></input>
-    <button class="btn btn-light">Aceptar</button>
-    <label>Resultado</label>
+<div class="formato">
+
+    <div class="contenedor rounded">
+         <h5>Ingresa un número</h5>
+         <input id="input" class="rounded" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57'/></input>
+         <button id="btn" class="btn btn-light">Aceptar</button>
+         <label id="label"></label>
+    </div>
 </div>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-
+   <script src="../js/ejercicio1.js"></script>
 </body>
 </html>
