--- a/index.html
+++ b/index.html
@@ -13,16 +13,25 @@
             <section>
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
-                        <h5 class="card-title"> Ejercicio1 </h5>
+                        <h5 class="card-title"> Ejercicio 1 </h5>
                         <h6 class="card-subtitle m-2 text-muted">Determinar par</h6>
-                        <p Class="card-text"> Al ingresar un numero se indica si es para o no</p>
+                        <p Class="card-text"> Al ingresar un numero se indica si es par o no</p>
                         <a href="html/ejercicio1.html" class="card-link aling-center">Ir a ejercicio</a>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title"> Ejercicio 2 </h5>
+                        <h6 class="card-subtitle m-2 text-muted">Comparar tamaño de palabras</h6>
+                        <p Class="card-text"> Indica cual palabra es mas larga</p>
+                        <a href="html/ejercicio2.html" class="card-link aling-center">Ir a ejercicio</a>
                     </div>
                 </div>
             </section>
         </article>
    </main>
     <script src="../js/ejercicio1.js"></script>
+    <script src="../js/ejercicio2.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 </body>
