--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercicios javaScript</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"></link>
 </head>
 <body>
@@ -16,7 +16,7 @@
                         <h5 class="card-title"> Ejercicio 1 </h5>
                         <h6 class="card-subtitle m-2 text-muted">Determinar par</h6>
                         <p Class="card-text"> Al ingresar un numero se indica si es par o no</p>
-                        <a href="html/ejercicio1.html" class="card-link aling-center">Ir a ejercicio</a>
+                        <a href="html/ejercicio1.html" class="card-link aling-center">Ir al ejercicio</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
@@ -24,7 +24,23 @@
                         <h5 class="card-title"> Ejercicio 2 </h5>
                         <h6 class="card-subtitle m-2 text-muted">Comparar tamaño de palabras</h6>
                         <p Class="card-text"> Indica cual palabra es mas larga</p>
-                        <a href="html/ejercicio2.html" class="card-link aling-center">Ir a ejercicio</a>
+                        <a href="html/ejercicio2.html" class="card-link aling-center">Ir al ejercicio</a>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title"> Ejercicio 3 </h5>
+                        <h6 class="card-subtitle m-2 text-muted">Comparar dos numeros</h6>
+                        <p Class="card-text"> Indicar cual es mayor</p>
+                        <a href="html/ejercicio3.html" class="card-link aling-center">Ir al ejercicio</a>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title"> Ejercicio 6 </h5>
+                        <h6 class="card-subtitle m-2 text-muted">Comparar si  es un numero  primo</h6>
+                        <p Class="card-text"> Mostrar si el número es primo o no</p>
+                        <a href="html/ejercicio6.html" class="card-link aling-center">Ir al ejercicio</a>
                     </div>
                 </div>
             </section>
@@ -32,6 +48,8 @@
    </main>
     <script src="../js/ejercicio1.js"></script>
     <script src="../js/ejercicio2.js"></script>
+    <script src="../js/ejercicio3.js"></script>
+    <script src="../js/ejercicio6.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 </body>
