--- a/index.html
+++ b/index.html
@@ -37,6 +37,22 @@
                 </div>
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
+                        <h5 class="card-title"> Ejercicio 4 </h5>
+                        <h6 class="card-subtitle m-2 text-muted"> Tabla de multiplicar </h6>
+                        <p Class="card-text"> Muestra la tabla de multiplicar</p>
+                        <a href="html/ejercicio4.html" class="card-link aling-center">Ir al ejercicio</a>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title"> Ejercicio 5 </h5>
+                        <h6 class="card-subtitle m-2 text-muted">Ordenar Numeros</h6>
+                        <p Class="card-text"> Imprime lista ordenada de numeros </p>
+                        <a href="html/ejercicio5.html" class="card-link aling-center">Ir al ejercicio</a>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
                         <h5 class="card-title"> Ejercicio 6 </h5>
                         <h6 class="card-subtitle m-2 text-muted">Comparar si  es un numero  primo</h6>
                         <p Class="card-text"> Mostrar si el número es primo o no</p>
@@ -49,6 +65,8 @@
     <script src="../js/ejercicio1.js"></script>
     <script src="../js/ejercicio2.js"></script>
     <script src="../js/ejercicio3.js"></script>
+    <script src="../js/ejercicio4.js"></script>
+    <script src="../js/ejercicio5.js"></script>
     <script src="../js/ejercicio6.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
